# prompt-caching-project

./: README.md  gemini_cache.py  main.py  pricing.py  pyproject.toml  questions.py  sample_doc.txt
docs/superpowers/plans/: 2026-07-01-gemini-caching-comparison.md
docs/superpowers/specs/: 2026-07-01-gemini-caching-comparison-design.md
tests/: test_pricing.py
